<resources>
    <string name="app_name">MyBudget</string>

    <!-- Main page -->
    <string name="main_menu_details">Details</string>
    <string name="main_menu_insert_test_data">Insert test data</string>
    <string name="main_chart_title_monthly_detail">Expend / Income of this month ...</string>

    <!-- Main Chart Entry -->
    <string name="main_chart_entry_date_title">Date</string>
    <string name="main_chart_entry_expense_title">Expense</string>
    <string name="main_chart_entry_income_title">Income</string>
    <string name="main_chart_entry_more_button">More...</string>


    <!-- Detail Data Title -->
    <string name="detail_view_type_title">Type:</string>
    <string name="detail_view_date">Date:</string>
    <string name="detail_view_price">Price:</string>
    <string name="detail_view_category">Category:</string>
    <string name="detail_view_note">Note:</string>

    <!-- Detail Type Category-->
    <string name="detail_type_category_income">Income</string>
    <string name="detail_type_category_expense">Expense</string>

    <!-- Expense Category -->
    <string name="category_expense_food">Food</string>
    <string name="category_expense_clothing">Clothing</string>
    <string name="category_expense_household">Household</string>
    <string name="category_expense_transportation">Transportation</string>
    <string name="category_expense_leisure">Leisure</string>
    <string name="category_expense_rent">Rent</string>
    <string name="category_expense_self_development">Self-Development</string>
    <string name="category_expense_other">Other</string>

    <!-- Income Category -->
    <string name="category_income_salary">Salary</string>
    <string name="category_income_pocket_money">Pocket money</string>
    <string name="category_income_bonus">Bonus</string>
    <string name="category_income_other">Other</string>

    <!-- Add Detail -->
    <string name="add_detail_title">Add Detail</string>
    <string name="add_detail_submit">Submit</string>
    <string name="add_detail_view_type">Type</string>
    <string name="add_detail_view_date">Date</string>
    <string name="add_detail_view_price">Price</string>
    <string name="add_detail_view_category">Category</string>
    <string name="add_detail_view_note">Note</string>
    <string name="add_detail_value_invalid_hint">Some content value invalid!</string>

    <!-- Detail List -->
    <string name="detail_list_title">Detail List</string>
    <string name="detail_menu_daily">Daily</string>
    <string name="detail_menu_weekly">Weekly</string>
    <string name="detail_menu_monthly">Monthly</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Date Picker -->
    <string name="confirm">Confirm</string>
    <string name="title_tab_start_date">Start Date</string>
    <string name="ttile_tab_end_date">End Date</string>

</resources>
