<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainEntryDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mainEntryDetail_titleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MainChartEntryTitleText"
                android:id="@+id/mainEntryDetail_dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_chart_entry_date_title"/>

            <TextView
                style="@style/MainChartEntryTitleText"
                android:id="@+id/mainEntryDetail_expenseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/main_chart_entry_expense_title"/>

            <TextView
                style="@style/MainChartEntryTitleText"
                android:id="@+id/mainEntryDetail_incomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/main_chart_entry_income_title"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainEntryDetail_valueLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/MainChartEntryValueText"
                android:id="@+id/mainEntryDetail_dateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2015/12/22"/>

            <TextView
                style="@style/MainChartEntryValueText"
                android:id="@+id/mainEntryDetail_expenseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:text="350"/>

            <TextView
                style="@style/MainChartEntryValueText"
                android:id="@+id/mainEntryDetail_incomeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:text="200" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_chart_entry_detail_divider"
        android:layout_marginTop="@dimen/activity_margin_10dp"
        android:layout_marginBottom="@dimen/activity_margin_10dp"
        android:background="?attr/colorAccent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding_40dp">

        <TextView
            android:id="@+id/mainEntryDetail_plusOrMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:textColor="@android:color/white"
            tools:text="+" />

        <TextView
            android:id="@+id/mainEntryDetail_balanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/mainEntryDetail_plusOrMinus"
            android:layout_toRightOf="@+id/mainEntryDetail_plusOrMinus"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            tools:text="150" />

        <Button
            android:id="@+id/mainEntryDetail_moreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/main_chart_entry_more_button"
            android:background="@drawable/abc_btn_default_mtrl_shape"/>

    </RelativeLayout>
</LinearLayout>